fixed overflows and made properly responsive for mobile-l

--- a/style.css
+++ b/style.css
@@ -377,6 +377,34 @@ input::placeholder{
 #dianne-russel, #cody-fisher, #theresa-webb{
     top:27em ;
 }
+#footer-first-h1{
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 70px;
+    font-weight: 800;
+}
+#footer-first-p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    width: 443px;
+    height: 72px;
+}
+footer div div h3{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 23px;
+    font-weight: 400;
+}
+#footer-rights{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    padding: 3em;
+}
 
 
 @media screen and (max-width:591px) {
@@ -395,8 +423,6 @@ input::placeholder{
     #header-section2{
         display: flex;
         flex-direction: column;
-        justify-content:space-between;
-        overflow-x: hidden;
     }
     #section2-div{
         display: flex;
@@ -405,14 +431,19 @@ input::placeholder{
         align-items: start;
     }
     #header-section2-h1{
+        margin-top: 0;
+        padding-top: 0;
         width: 7em;
-        height: 129px;
+        height: 499px;
     }
     #first-p{
+        margin-top: 0;
+        padding-top: 0;
         width: 19em;
         height: 12em;
     }
     #first-button-div{
+        height: 10em;
         display: flex;
         justify-content: center;
         align-items: start;
@@ -420,18 +451,26 @@ input::placeholder{
     }
     #section2-div2{
         background-image: url("images/Images\ 2.png");
-        position: absolute;
-        top: 50em;
-        left: .25em;
-        width: 22em;
-        height: 37em;
+        width: 21em;
+        height: 35em;
+        background-repeat: no-repeat;
+        background-attachment:scroll;
+        background-size: cover;
+        background-position: center;
+    }
+    #card-p{
+        font-size: medium;
+        padding: 0;
+    }
+    #header-500{
+        font-size:29px;
     }
     #div-child1, #div-child2{
         position: relative;
     }
     #div-child1{
-        left: 214.2px;
-        top: 76.6px;
+        left: 139.2px;
+        top: 150.6px;
     }
     #div-child2{
         left: 32px;
@@ -442,7 +481,6 @@ input::placeholder{
         flex-direction: column;
         text-align: center;
         position: relative;
-        top: 600px;
     }
     #main-div1-h1{
         font-size: 2em;
@@ -466,11 +504,15 @@ input::placeholder{
         align-items: center;
     }
     #run-extra-mile-h1{
-        font-size: 32px;
+        font-size: 30px;
+        height: 3em;
+        padding-bottom: 0;
     }
     #run-extra-mile-p{
         padding: .7em;
         width: 20em;
+        height: auto;
+        padding-top: 0;
     }
     #run-extra-mile-btn{
         margin: 1em;
@@ -492,6 +534,7 @@ input::placeholder{
     #bmi-p{
         width: 90vw;
         padding-left: 1em;
+        height: auto;
     }
     #bmi-div-with-bg{
         display: flex;
@@ -567,6 +610,33 @@ input::placeholder{
     #theresa-webb{
         top: 94em;
     }
+    footer{
+        position: relative;
+        margin: 0;
+        padding-left: 3em;
+    }
+    #footer-div-1{
+        display: flex;
+        flex-direction: column;
+    }
+    #footer-div-2{
+        display: flex;
+        flex-direction: column;
+    }
+    #footer-first-p{
+        width: 65vw;
+    }
+    footer div hr{
+        width: 25em;
+        position: relative;
+        right: 4em;
+    }
+    #footer-rights{
+        position: relative;
+        right: 2.6em;
+        width: 16em;
+    }
+
 
     *{
         overflow-x: hidden;
